docs: update java-flagy